Realizo impl de servicios, persistencia y autenticacion para consumir apiMarvel

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,3 +8,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+integration.marvel.key.public=dscvsd8c25cdscd5s2sdcds66scd26dscd69
+integration.marvel.key.private=4fdg4fgsdg9gvs5gvf9df2vdv2njhkiae25f
