--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+integration.marvel.key.public=b570440ecbc193c85cc33fef5d2c7c54
+integration.marvel.key.private=2b90a3a1432e57a3811038238f3b94fb6805fda9
