Completo los metodos de characterRepository y comicRepository

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,5 +9,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+integration.marvel.base.path=http://gateway.marvel.com/v1/public
 integration.marvel.key.public=b570440ecbc193c85cc33fef5d2c7c54
 integration.marvel.key.private=2b90a3a1432e57a3811038238f3b94fb6805fda9
